# redis_browser

./: plan.md  pyproject.toml  requirements.txt  rxconfig.py
redis_browser/: redis_browser.py
redis_browser/components/: command_console.py  config_modal.py  key_browser.py  key_details.py  sidebar.py
redis_browser/states/: command_state.py  connection_state.py  key_browser_state.py  key_details_state.py
